plugins/htmltools/testData/inspections/xmlHighlightVisitor/ReportingXmlHighlightVisitorProblems.xhtml
<div>
  <div <error descr="Attribute cl is not allowed here">cl</error>="aaa"/>
</div>